--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://wjdxodbs.github.io/react-test.git"
+  "homepage": "https://wjdxodbs.github.io/react-test"
 }
